[package]
name = "yarl-2"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.21.0", features = [] }#"derive"
codepage-437 = "0.1.0"
#bmp = "0.5.0"
cp437 = "0.1.1"
#env_logger = "0.11.6"
image = "0.25.5"
oem_cp = "2.0.0"
#fontdue = "0.9.2"
winit = "0.30.7"#29
#6

[target.'cfg(target_arch="wasm32")'.dependencies]#
wasm-rs-async-executor = "0.9.0"
wgpu = {version="23.0.1",features=["webgl"]}
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
[target.'cfg(not(target_arch="wasm32"))'.dependencies]###
smol = "2.0.2"
wgpu = "23.0.1"
